Style radio input to stop jumping to top of the page on click

--- a/components/form/_radio.scss
+++ b/components/form/_radio.scss
@@ -10,6 +10,13 @@
 
         .radio-button-wrapper {
                 display: inline-block;
+
+                input {
+                        position: absolute;
+                        top: -9999px;
+                        left: -9999px;
+                        visibility: hidden;
+                }
         }
 
         .state {
